@@ -25,3 +25,15 @@ if settings.startup["beyond-vanilla-qol-enable-modpack-controls-configuration"] 
         end
     end
 end
+
+
+-- Visual overrides
+-- ================
+
+-- Align Asteroid Mining ores/chunks with Realistic Ores colours/textures.
+data.raw["item"]["iron-ore-chunk"]["icons"][2].tint = {a = 0.8,r = 144,g = 24,b = 8}
+data.raw["item"]["asteroid-iron-ore"]["icons"][2].tint = {a = 0.8,r = 144,g = 24,b = 8}
+data.raw["item"]["copper-ore-chunk"]["icons"][2].tint = {a = 0.8,r = 0,g = 77,b = 59}
+data.raw["item"]["asteroid-copper-ore"]["icons"][2].tint = {a = 0.8,r = 0,g = 77,b = 59}
+data.raw["item"]["uranium-ore-chunk"]["icons"][2].tint = {a = 0.8,r = 70,g = 98,b = 0}
+data.raw["item"]["asteroid-uranium-ore"]["icons"][2].tint = {a = 0.8,r = 70,g = 98,b = 0}
