@@ -22,6 +22,7 @@
         "PlutoniumEnergy >= 1.6.2",
         "Realistic_Heat_Glow >= 2.1.0",
         "RealisticReactorGlow >= 1.101.7",
+        "RealisticOres >= 7.101.1",
         "SpaceMod >= 1.1.3",
         "Superheating >= 1.0.3",
         "solar-walls >= 0.0.16"
