@@ -26,4 +26,5 @@ Date: 9999-99-99
     - Visuals
       - Realistic nuclear reactor glow (via "Realistic Reactor Glow")
       - Improved heat pipe glow (via "Realistic Heat Glow")
+      - Realistic ore textures/colours (via "Realistic Ores")
   Bugfixes:
